Basic functionality on user screen and list screen.  Still lots of work to do.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,17 @@
 <resources>
     <string name="app_name">SpellTest</string>
-    <string name="title_activity_user_selection">Select a user</string>
-    <string name="title_activity_word_list_chooser">Word List Chooser</string>
+    <string name="title_activity_userSelectionActivity">Select a user</string>
+    <string name="title_activity_listSelectionActivity">Word List Chooser</string>
+    <string name="title_activity_testActivity">Test In Progress</string>
     <string name="dialog_new_user">New User Details</string>
     <string name="first_name">First name</string>
     <string name="last_name">Last name</string>
+    <string name="dialog_word_list_name">Word list name</string>
     <string name="word_list_name">Name of word list</string>
+    <string name="correct_answer">Your answer is correct!</string>
+    <string name="incorrect_answer">Sorry, that answer is incorrect.</string>
+    <string name="title_activity_testResultsActivity">Test Results</string>
+
 
 
 </resources>
