Basic functionality on user screen and list screen.  Still lots of work to do.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="title_activity_userSelectionActivity">Select a user</string>
     <string name="title_activity_listSelectionActivity">Word List Chooser</string>
     <string name="title_activity_testActivity">Test In Progress</string>
+    <string name="title_activity_listBuilderActivity">Word List Editor</string>
     <string name="dialog_new_user">New User Details</string>
     <string name="first_name">First name</string>
     <string name="last_name">Last name</string>
